Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/IP_ImpellamGDPRSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the parameters for managing data retention within the system.</description>
    <label>RSSGlobal_GDPR_settings</label>
</CustomObject>