Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/fields/IP_ActivityTypesThatQualifyAsContact__c.field-meta.xml
<CustomField>
    <fullName>IP_ActivityTypesThatQualifyAsContact__c</fullName>
    <description>Types of recorded activities that count as contact with a candidate</description>
    <inlineHelpText>Comma separated list like “ Type1,Type2,….”</inlineHelpText>
    <label>Activity Types That Qualify As Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>