Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/fields/IP_DeletionBatchSize__c.field-meta.xml
<CustomField>
    <fullName>IP_DeletionBatchSize__c</fullName>
    <description>Number of records that are processed in each deletion batch.</description>
    <label>Deletion batch size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>