Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/fields/IP_GDPRBrandID__c.field-meta.xml
<CustomField>
    <fullName>IP_GDPRBrandID__c</fullName>
    <description>Value passed in the GDPR API integrations for Brand name.</description>
    <label>GDPR Brand ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>