Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/fields/IP_Scheduledeletionsize__c.field-meta.xml
<CustomField>
    <fullName>IP_Scheduledeletionsize__c</fullName>
    <label>Schedule deletion size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>