Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/fields/IP_UncontactedCandidateRetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>IP_UncontactedCandidateRetentionPeriod__c</fullName>
    <description>Number of days an uncontacted candidates data is held in the system.</description>
    <label>Uncontacted Candidate Retention Period</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>