Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGDPRSettings__c/fields/IP_UnworkedCandidateDataRetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>IP_UnworkedCandidateDataRetentionPeriod__c</fullName>
    <description>Number of days an unworked candidates data is held in the system</description>
    <label>Unworked Candidate Data Retention Period</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>